--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -7,22 +7,18 @@
           <div class="nav__left">
             <%= link_to image_tag("logo_transparent.png", class: :logo), root_path %>
           </div>
-          <%# ログインしているときは以下を表示するようにしましょう %>
-          <%# if user_signed_in? %>
+          <% if user_signed_in? %>
             <div class="nav__right">
-              <%# link_to current_user.nickname, "#", class: "user-nickname" %>
-              <%# link_to "ログアウト", destroy_user_session_path, method: :delete, class: :nav__logout%>
+              <%= link_to current_user.nickname, "#", class: "user-nickname" %>
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :nav__logout%>
               <%# link_to "お店を登録", new_shop_path, class: :nav__btn %>
             </div>
-          <%# else %>
-          <%# // ログインしているときは上記を表示するようにしましょう %>
-          <%# ログインしていないときは以下を表示するようにしましょう %>
+          <% else %>
             <div class="nav__right">
-              <%# link_to "ログイン", new_user_session_path, class: :nav__btn %>
-              <%# link_to "新規登録", cancel_user_registration_path, class: :nav__btn %>
+              <%= link_to "ログイン", new_user_session_path, class: :nav__btn %>
+              <%= link_to "新規登録", cancel_user_registration_path, class: :nav__btn %>
             </div>
-          <%# end %>
-          <%# // ログインしていないときは上記を表示するようにしましょう %>
+          <% end %>
         </div>
       </div>
     </header>
