--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -11,7 +11,7 @@
             <div class="nav__right">
               <%= link_to current_user.nickname, "#", class: "user-nickname" %>
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :nav__logout%>
-              <%# link_to "お店を登録", new_shop_path, class: :nav__btn %>
+              <%= link_to "お店を登録", new_shop_path, class: :nav__btn %>
             </div>
           <% else %>
             <div class="nav__right">
