--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -41,6 +41,19 @@
               </p>
             </div>
           </div>
+          <div class="more">
+              <span><%= image_tag 'arrow_top.png' %></span>
+            <ul class="more_list">
+              <% if user_signed_in? %>
+              <li>
+                <%= link_to '編集', edit_shop_path(shop.id), method: :get %>
+              </li>
+              <li>
+                <%= link_to '削除', "#", method: :delete %>
+              </li>
+              <% end %>
+            </ul>
+          </div>
         </div>
       </div>
     <% end %>
