ビュー修正

--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -49,7 +49,7 @@
                 <%= link_to '編集', edit_shop_path(shop.id), method: :get %>
               </li>
               <li>
-                <%= link_to '削除', "#", method: :delete %>
+                <%= link_to '削除', shop_path(shop.id) ,method: :delete, method: :delete %>
               </li>
               <% end %>
             </ul>
