--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -4,7 +4,7 @@
       <div class="logo_t">
         <%= link_to image_tag("logo_transparent.png", class: :logo_y), root_path %>
       </div>
-    <%= form_with model: @shop, local: true do |f|%>
+    <%= form_with model: @shop,id: 'new_post', local: true do |f|%>
       <div class="field">
         <%= f.label :image, "お店の画像" %><br />
         <%= f.file_field :image, id:"shop_image" %>
