--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -35,17 +35,22 @@ a {
 }
 
 /* ヘッダー */
-
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #f4cfa7;
   height: 90px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 .image_restaurant {
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
   opacity: 30%;
-  padding: 90px 0;
+  right: 0vw;
 }
 .inner {
   width: 1024px;
@@ -54,19 +59,17 @@ a {
 }
 
 .nav {
-  width: 100%;
   display: flex;
   justify-content: space-between;
-  position: relative;
-  bottom: 138vh;
+  align-items: center;
+  height: 100%;
 }
+
 .logo {
   width: 150px;
   height: 150px;
-  position: relative;
-  bottom: 8vh;
-  right: 6vw;
 }
+
 .nav__btn{
   display: inline-block;
   padding: 0.4em 1.6em;
@@ -139,7 +142,6 @@ a {
   width: 550px;
   height: 200px;
   top: 70px;
-  left: 20px;
   border-radius: 10px 10px;
 }
 .shop_imege {
@@ -225,7 +227,7 @@ a {
   position: absolute;
   cursor: pointer;
   top: 70px;
-  right: 1px;
+  right: 8px;
   z-index: 2;
   height: 100px;
   width: 80px;
