--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -273,3 +273,22 @@ a {
   height: 150px;
   object-fit: cover;
 }
+
+.other-images {
+  display: flex;
+}
+
+.other-image {
+  margin-right: 10px;
+}
+
+.image-delete-button {
+  text-align: center;
+  border: solid 1px;
+  cursor: pointer;
+}
+
+.main-image {
+  height: 200px;
+  width: 200px;
+}
