--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -4,7 +4,14 @@
   </div>
   <div class="shop-box">
     <div class="shop-img-content">
-      <%= image_tag @shop.image ,class:"shop-box-img" if @shop.image.attached? %>
+      <%= image_tag @shop.images[0] ,class:"shop-box-img" if @shop.image.attached? %>
+      <div class="other-images">
+        <% @shop.images[1..-1].each do |image| %>
+          <div class="other-image">
+            <%= image_tag image %>
+          </div>
+        <%end%>
+      </div>
     </div>
 
     <% if user_signed_in? %>
