--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -30,7 +30,7 @@
     <div class="shop_list">
       <div class="block">
         <div class="shop_imege">
-          <%= image_tag shop.image.variant(resize: "200x250"), class: "shop-img" if shop.image.attached? %>
+          <%= image_tag shop.images[0].variant(resize: "200x250"), class: "shop-img" if shop.image.attached? %>
         </div>
         <div class="card__body">
           <%= link_to shop.store_name, shop_path(shop.id), class: "card__title" %>
