--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -292,3 +292,10 @@ a {
   height: 200px;
   width: 200px;
 }
+
+.image-delete-button {
+  width: 50px;
+  border: solid 1px;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
