--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -6,8 +6,11 @@
       </div>
     <%= form_with model: @shop,id: 'new_post', local: true do |f|%>
       <div class="field">
+        <div id="previews"></div>
+        <div class="click-upload">
         <%= f.label :image, "お店の画像" %><br />
-        <%= f.file_field :image, id:"shop_image" %>
+        <%= f.file_field :image, id:"shop_image", name: 'shop[images][]', data: { index: 0 }%>
+        </div>
       </div>
 
       <div class="field">
