--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -11,7 +11,6 @@
             <%= image_tag image %>
           </div>
         <% end %>
-      <% end %>
       </div>
     </div>
 
@@ -54,4 +53,5 @@
         </tr>
       </tbody>
     </table>
+  </div>
 </div>
