--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -7,7 +7,7 @@
       <%= image_tag @shop.images[0], class:"shop-box-img" if @shop.images.attached? %><br>
       <div class="other-images">
         <% @shop.images[1..-1].each do |image| %>
-          <div class="other-image">
+          <div class="other-image_a">
             <%= image_tag image %>
           </div>
         <% end %>
@@ -20,12 +20,11 @@
     <% end %>
 
     <div class="item-explain-box">
-
-    </div>
-    <table class="detail-table">
     <div class="logo_t">
       <%= link_to image_tag("logo_transparent.png", class: :logo_a), root_path %>
     </div>
+    </div>
+    <table class="detail-table">
       <tbody>
         <tr>
           <th class="detail-item">店名</th>
