--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -46,7 +46,7 @@
               <%= link_to "編集", edit_shop_path(shop.id), method: :get %>
             </li>
             <li>
-              <%= link_to "削除", shop_path(shop.id), method: :delete, data: { confirm: "Are you sure?" }, class: "delete-btn" %>
+              <%= link_to "削除", shop_path(shop.id), method: :delete, class: "delete-btn" %>
             </li>
           <% end %>
         </ul>
