--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -293,3 +293,17 @@ a {
 .more_list_w {
   padding: 10px 0;
 }
+
+.header_a {
+  background-color: #6ba8cc;
+  height: 90px;
+}
+
+.card_a {
+  position: absolute;
+  color: black;
+  top: 20px;
+  left: 40vw;
+  font-weight: 600;
+  font-size: 2em;
+}
