ビューの追加と修正

--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="inner">
     <div class="form__wrapper">
-      <div class="logo_t">
+      <div class="logo_g">
         <%= link_to image_tag("logo_transparent.png", class: :logo_y), root_path %>
       </div>
     <%= form_with model: @shop, url:shops_path,id: 'new_post', local: true do |f|%>
