--- a/app/views/interestings/index.html.erb
+++ b/app/views/interestings/index.html.erb
@@ -18,7 +18,7 @@
     <div class="shop_list">
       <div class="block">
         <div class="shop_imege">
-          <%= image_tag shop.images[0].variant(resize: "210x250"), class: "shop-img" if shop.images.attached? %><br>
+          <%= image_tag shop.images[0], class: "shop-img" if shop.images.attached? %><br>
         </div>
         <div class="card__body">
           <%= link_to shop.store_name, shop_path(shop.id), class: "card__title" %>
