ビュー修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
       <div class="field">
         <%= f.label "パスワード" %>
         <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> 桁以上)</em>
+          <em>(<%= @minimum_password_length %> 桁以上、半角英数で入力してください)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
