--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -31,10 +31,11 @@
   <% end %>
   <% if user_signed_in? && @shops.where(interesting_store_id: 1).exists? %>
   <% @shops.where(interesting_store_id: 1).each do |shop| %>
+  <% if current_user.id == shop.user_id %>
     <div class="shop_list">
       <div class="block">
         <div class="shop_imege">
-          <%= image_tag shop.images[0], class: "shop-img" if shop.images.attached? %><br>
+          <%= image_tag shop.images[0],class: "shop-img" if shop.images.attached? %><br>
         </div>
         <div class="card__body">
           <%= link_to shop.store_name, shop_path(shop.id), class: "card__title" %>
@@ -57,6 +58,7 @@
         </ul>
       </div>
     </div>
+  <% end %>
   <% end %>
   <% end %>
 </main>
